[project]
name = "pytorchvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raymond C. W. Leung", email = "42256245+raymondcwleung@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pytorchvae = "pytorchvae:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
